# modern_data_plateform

./: .gitignore  README.md  pyproject.toml
app/: etl.py
dbt/dw/: dbt_project.yml  profiles.yml
dbt/dw/models/bronze/: schema.yml  testing_dbt.sql
docker/: docker-compose.yml
docker/trino/: iceberg.properties
docker/trino/catalog/: postgresql.properties  test-schema.sql
